--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <!-- AOS -->
    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- My CSS -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body id="home">
     <!-- Navbar  -->
@@ -34,6 +34,9 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#gallery">Gallery</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#keyboard">Keyboard</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#contact">Contact</a>
@@ -131,7 +134,44 @@
     </div>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#FFFF" fill-opacity="1" d="M0,224L40,240C80,256,160,288,240,282.7C320,277,400,235,480,202.7C560,171,640,149,720,128C800,107,880,85,960,112C1040,139,1120,213,1200,229.3C1280,245,1360,203,1400,181.3L1440,160L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"></path></svg>
 </section>
+<section id="my-keyboards">
+  <div class="container">`
+    <div class="row text-center mb-3">
+      <div class="col">
+        <h2>My Keyboards</h2>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6 col-lg-4 mb-3 ">
+        <div class="keyboard-box">
+          <h4 class="keyboard-name">Keychron K2
+          </h4>
+          <img src="./Assets/Image/Keyboards/2.png" alt="Keychron K2" class="keyboard-img">
+          <a href="#" class="btn btn-light keyboard-detail-button">Show Details</a>
+        </div>
+      </div>
+      <div class="col-md-6 col-lg-4 mb-3 ">
+        <div class="keyboard-box">
+          <h4 class="keyboard-name">Amaorus D8
+          </h4>
+          <img src="./Assets/Image/Keyboards/3.png" alt="Keychron K2" class="keyboard-img">
+          <a href="#" class="btn btn-light keyboard-detail-button">Show Details</a>
+        </div>
+      </div>
+      <div class="col-md-6 col-lg-4 mb-3 ">
+        <div class="keyboard-box">
+          <h4 class="keyboard-name">Gaming S7
+          </h4>
+          <img src="./Assets/Image/Keyboards/1.png" alt="Keychron K2" class="keyboard-img">
+          <a href="#" class="btn btn-light keyboard-detail-button">Show Details</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#e2edff" fill-opacity="1" d="M0,288L48,272C96,256,192,224,288,197.3C384,171,480,149,576,165.3C672,181,768,235,864,250.7C960,267,1056,245,1152,250.7C1248,256,1344,288,1392,304L1440,320L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
 <!-- Akhir Projects -->
+
 
 <!-- Gallery -->
 <section id="gallery">
@@ -195,7 +235,9 @@
   
 </div>
 </div>
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffff" fill-opacity="1" d="M0,64L48,96C96,128,192,192,288,234.7C384,277,480,299,576,277.3C672,256,768,192,864,165.3C960,139,1056,149,1152,149.3C1248,149,1344,139,1392,133.3L1440,128L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
 </section>
+
 <!-- Akhir Gallery -->
 
 <!-- Contact -->
@@ -239,10 +281,11 @@
           </form>
     </div>
 </div>
-
 </div>
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0d6efd" fill-opacity="1" d="M0,128L40,128C80,128,160,128,240,160C320,192,400,256,480,240C560,224,640,128,720,128C800,128,880,224,960,261.3C1040,299,1120,277,1200,240C1280,203,1360,149,1400,122.7L1440,96L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"></path></svg>
 </section>
+
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0d6efd" fill-opacity="1" d="M0,128L40,128C80,128,160,128,240,160C320,192,400,256,480,240C560,224,640,128,720,128C800,128,880,224,960,261.3C1040,299,1120,277,1200,240C1280,203,1360,149,1400,122.7L1440,96L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"></path></svg>
+
 
 <!-- Akhir Contact -->
 <!-- Footer -->
@@ -251,6 +294,14 @@
 </footer>
 <!-- Akhir Footer -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+<script type="text/javascript" src="./JavaScript/raw.githubusercontent.com_micku7zu_vanilla-tilt.js_master_dist_vanilla-tilt.min.js"></script>
+<script type="text/javascript">
+	VanillaTilt.init(document.querySelectorAll(".keyboard-box"), {
+		max: 25,
+		speed: 400
+	});
+	
+</script>
 
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script>
