--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <!-- AOS -->
    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- My CSS -->
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body id="home">
     <!-- Navbar  -->
